constrained listings container to 70%

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,7 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 
-<div class="container" id="listings">
+<div class="container" style="max-width: 70%;" id="listings">
 <h1>Listings</h1>
     <%= render "listings_index_card" %>
 
