constrained container size to 70% on retailers#index

--- a/app/views/retailers/index.html.erb
+++ b/app/views/retailers/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="retailers">
+<div class="container" id="retailers" style="max-width: 70%">
   <h1>Retailers</h1>
   <%= render "retailer_index_card" %>
 
