--- a/app/views/products/_navtabs.html.erb
+++ b/app/views/products/_navtabs.html.erb
@@ -1,3 +1,4 @@
+<!--  navigation tabs for the product#show page current prices, price history & product info-->
   <ul class="nav nav-underline nav-fill mb-3" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="current-prices-tab" data-bs-toggle="tab" data-bs-target="#current-prices" type="button" role="tab" aria-controls="current-prices" aria-selected="true">Current Prices</button>
