--- a/app/views/products/_prod_index_card.html.erb
+++ b/app/views/products/_prod_index_card.html.erb
@@ -1,3 +1,4 @@
+<!-- Products#index cards-->
 <% @products.each do |product| %>
     <div class="card mb-3" style="max-width: 100%;">
       <div class="row g-0">
