--- a/app/views/products/_tabcontent.html.erb
+++ b/app/views/products/_tabcontent.html.erb
@@ -1,3 +1,4 @@
+<!-- Tab Content for product#show page-->
 <div class="tab-content">
   <!-- Current Prices Tab Content-->
   <div class="tab-pane active mb-3" id="current-prices" role="tabpanel" aria-labelledby="current-prices-tab" tabindex="0">
