--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,4 @@
 <div class="alert alert-<%= css_class%> notice-dismissable fade show" role="alert">
-    <%= message  %> 
+  <%= message  %>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
