--- a/app/views/products/_prod_index_card.html.erb
+++ b/app/views/products/_prod_index_card.html.erb
@@ -3,7 +3,7 @@
     <div class="card mb-3" style="max-width: 100%;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="<%= product.image %>" class="ms-3 img-fluid rounded-start product-logo" alt="<%=product.name%> logo">
+          <%= image_tag(product.image, class: 'ms-3 img-fluid rounded-start product-logo', alt: "#{product.name} logo") %>
         </div>
         <div class="col-md-8">
           <div class="card-body text-end mt-4 me-3">
