--- a/app/views/products/_tabcontent.html.erb
+++ b/app/views/products/_tabcontent.html.erb
@@ -6,12 +6,17 @@
       <div class="card w-100 text-end">
         <div class="row g-0">
           <div class="mt-3 col-md-4">
-            <a href="<%=listing.url%>"><img src="<%= listing.retailer.image%>" class="img-fluid rounded-start retailer-logo" alt="<%=listing.retailer.name%> logo"></a>
+            <%= link_to listing.url do %>
+              <%= image_tag listing.retailer.image, class: "img-fluid rounded-start retailer-logo", alt: "#{listing.retailer.name} logo" %>
+            <% end %>
+
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">$<%= listing.snapshots.order(snapshot_date: :desc).first.price%></h5>
-              <p class="card-text"><a href="<%=listing.url%>">View Listing</a>  </p>
+              <p class="card-text">
+                <%= link_to "View Listing", listing.url %>
+              </p>
               <p class="card-text"><small class="text-body-secondary">Last updated <%= listing.snapshots.maximum(:snapshot_date).strftime("%D")%></small></p>
             </div>
           </div>
@@ -51,12 +56,12 @@
   <!-- Product Info Tab Content-->
   <div class="tab-pane" id="product-info" role="tabpanel" aria-labelledby="product-info-tab" tabindex="0">
     <table class="product-info-table table table-hover table-striped">
-     
+
       <tbody>
         <tr>
           <td><strong>
-            Product Name
-          </strong></td>
+              Product Name
+            </strong></td>
           <td>
             <%= @product.name %>
           </td>
