--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -11,13 +11,13 @@
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    
-    <!-- TO-DO: ADD REAL AUTHORIZATION-->
-    <% if current_user && current_user.admin? %>
-        <li class="nav-item">
-          <%= link_to "Admin", rails_admin_path, class: "nav-link" %>
-        </li>
-    <% end %>
+
+        <!-- Render admin tab for admin users -->
+        <% if current_user && current_user.admin? %>
+          <li class="nav-item">
+            <%= link_to "Admin", rails_admin_path, class: "nav-link" %>
+          </li>
+        <% end %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products
@@ -35,33 +35,27 @@
           My Account
         </a>
         <ul class="dropdown-menu dropdwon-menu-end" aria-labelledby="dropdownMenuLink">
-        <% if user_signed_in? %>
+          <% if user_signed_in? %>
 
-          <li>
-            <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link mx-3" %>
-          </li>
-          <li><hr class="dropdown-divider"></li>
-          <li>
-            <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link mx-3"%>
-          </li>
+            <li>
+              <%= link_to "Edit Profile", edit_user_registration_path	, class: "nav-item nav-link mx-3" %>
+            </li>
+            <li><hr class="dropdown-divider"></li>
+            <li>
+              <%= link_to "Sign-out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-item nav-link mx-3"%>
+            </li>
           <% else %>
-          <li>
-            <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link mx-3"%>
-          </li>
-          <li>
-            <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link mx-3"%>
-          </li>
+            <li>
+              <%= link_to "Sign-in", new_user_session_path, class: "nav-item nav-link mx-3"%>
+            </li>
+            <li>
+              <%= link_to "Sign-up", new_user_registration_path, class: "nav-item nav-link mx-3"%>
+            </li>
           <% end %>
         </ul>
       </div>
 
-    </ul>
+    </div>
 
-    <!-- TO DO ADD SEARCH FUNCTIONALITY TO NAVBAR-->
-    <!-- <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>-->
   </div>
-</div>
 </nav>
