--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
-<div class="alert alert-<%= css_class%> notice-dismissable fade show" role="alert">
+<div class="alert alert-<%= css_class%> notice-dismissable fade show d-flex align-items-center justify-content-between" role="alert">
   <%= message  %>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
