--- a/app/views/shared/_fixed_navbar.html.erb
+++ b/app/views/shared/_fixed_navbar.html.erb
@@ -29,6 +29,7 @@
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           My Account
         </a>
+        <%# should be dropdown %>
         <ul class="dropdown-menu dropdwon-menu-end" aria-labelledby="dropdownMenuLink">
           <% if user_signed_in? %>
 
