--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -16,6 +16,7 @@
           </p>
 
         </div>
+        <%# good partials! %>
         <%= render partial: "waitlist_entries/form"%>
       </div>
 
